Fix in index of cool-stuff and <a> has high z-index

--- a/src/sass/global.sass
+++ b/src/sass/global.sass
@@ -115,6 +115,8 @@ li
   @extend p
 
 a
+  position: relative
+  z-index: 999
   text-decoration: none
   &:link
     color: $secondary-color
